[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["abdu-zeyad <abd.d@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.1.4"
seaborn = "^0.11.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
